# lab06tut

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  example1  example2  formatter_ex.cpp  otchet.md
.github/workflows/: ci.yml
artifacts/: solver-0.1.0.0-Linux.deb  solver-0.1.0.0-Linux.rpm
banking/: CMakeLists.txt
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp
hello_world/: CMakeLists.txt  main.cpp
solver/: CMakeLists.txt  main.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
tests/: test1.cpp
